# strawberry-framework

./: .gitignore  CMakeLists.txt  README.md  generate.sh  main.cpp  sys_config.json  tasks.json
app/src/: app_swc1.cpp
core/inc/: rtsim.hpp  sys_mon.hpp
core/pygen/: cxsysgen.py  sysgen.py
core/src/: rtsim.cpp  sys_logger.cpp  sys_mon.cpp
examples/one_sec_tick/: build_release.sh  main.cpp  sys_config.json  tasks.json
examples/one_sec_tick/app/inc/: app_swc.hpp  mylibs.hpp
examples/one_sec_tick/app/src/: app_swc1.cpp
examples/one_sec_tick/core/inc/: system_types.hpp
examples/one_sec_tick/core/pygen/: cxrtegen.py  rte_signals.csv  sysconfig.py  sysgen.py
examples/one_sec_tick/core/src/: sys_mon.cpp
examples/system_monitor/: README.md  generate.sh  main.cpp  sys_config.json  tasks.json
examples/system_monitor/app/inc/: app_swc.hpp
examples/system_monitor/app/src/: app_swc1.cpp
examples/system_monitor/core/inc/: rtsim.hpp  sys_logger.hpp  sys_mon.hpp  sys_timer.hpp
examples/system_monitor/core/pygen/: cxsysgen.py  sysconfig.py  sysgen.py
examples/system_monitor/core/src/: rtsim.cpp  sys_logger.cpp  sys_mon.cpp  sys_timer.cpp
